syntax = "proto3";

package pb;

message UserListRequest {

}

message UserCreateRequest {
  string Username = 1;
  string Password = 2;
}

message UserDeleteRequest {
  string Username = 1;
}

message UserRenewRequest {
  string Username = 1;
}

message UserGenConfigRequest {
  string Username = 1;
}

service UserService {
  rpc List (UserListRequest) returns (UserResponse) {}
  rpc Create (UserCreateRequest) returns (UserResponse) {}
  rpc Delete (UserDeleteRequest) returns (UserResponse) {}
  rpc Renew (UserRenewRequest) returns (UserResponse) {}
  rpc GenConfig (UserGenConfigRequest) returns (UserGenConfigResponse) {}
}

message UserResponse {
  message User {
    string Username = 1;
    string ServerSerialNumber = 2;
    string Cert = 3;
    string CreatedAt = 4;
  }

  repeated User users = 1;
}

message UserGenConfigResponse {
  string ClientConfig = 1;
}
